<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_popup"
                android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <EditText
                android:id="@+id/item_popup"
                android:layout_below="@+id/title_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item">

            </EditText>

            <EditText
                android:id="@+id/itemQuantity_popup"
                android:layout_below="@+id/item_popup"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_quantity">

            </EditText>

            <Button
                android:id="@+id/saveButton_popup"
                android:layout_below="@+id/itemQuantity_popup"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Button>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>