<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <Button
                android:id="@+id/confirmation_yes_button"
                android:text="@string/yes"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>

            <Button
                android:id="@+id/confirmation_no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:textColor="@android:color/white">

            </Button>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>